--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
   <body>
-  <h1>fucklord</h1>
+  <h1>sylvarn.me</h1>
+  <p color=#ff0000>work in progress.</p>
+  <h1>q and A</h1>
+ <p><b>- when won't it be</b></p>
+ <p>i don't know</p>
   </body>
 </html>
