--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <body>
   <h1>sylvarn.me</h1>
-  <p color=#ff0000>work in progress.</p>
+  <p p style="color:#ff0000;">work in progress.</p>
   <h1>q and A</h1>
  <p><b>- when won't it be</b></p>
  <p>i don't know</p>
