--- a/index.html
+++ b/index.html
@@ -1,4 +1,16 @@
 <html>
+<head>
+   <style type="text/css">
+      p { padding-bottom: 12px; }
+      body {
+      padding-top: 80px;
+      text-align: center;
+      font-family: courier, courier new;
+      background: url(https://images.unsplash.com/photo-1470093851219-69951fcbb533?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80) 50%;
+      background-size: cover;
+      }
+   </style>
+</head>
   <body>
   <h1>sylvarn.me</h1>
   <p p style="color:#ff0000;">work in progress.</p>
@@ -6,6 +18,7 @@
  <p><b>- when won't it be</b></p>
  <p>i don't know</p>
  <br>
+<img src="https://i.imgur.com/db2fuIB.gif" alt="oh yeah" />
  <br>
  <h1>now listen to this</h1>
 <iframe width="600" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/611824242&color=%230c342c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
