--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
  <p><b>- when won't it be</b></p>
  <p>i don't know</p>
  <br>
-<img src="https://i.imgur.com/db2fuIB.gif" alt="oh yeah" />
+<img src="blob:https://imgur.com/d9e711c6-d503-4711-b70e-881951c88f58" alt="oh yeah" />
  <br>
  <h1>now listen to this</h1>
 <iframe width="600" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/611824242&color=%230c342c&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
